# capsule

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  TODO.md  capsule.toml.example
.github/workflows/: ci.yml  release.yml
crates/capsule/: Cargo.toml  README.md  build.rs
crates/capsule-lib/: Cargo.toml  README.md
crates/capsule-lib/src/: ascii_header.rs  capsule.rs  crc.rs  encoding.rs  error.rs  lib.rs
crates/capsule-lib/tests/: golden.rs  smoke.rs
crates/capsule-lib/tests/fixtures/: ascii.capsule  base64.capsule  cbor.capsule
crates/capsule/src/: main.rs  spec.rs
