# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"
members = [
  "crates/capsule-lib",
  "crates/capsule",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
