# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "capsule-lib"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Rust library for reading and writing Capsule container files"
documentation = "https://docs.rs/capsule-lib"
keywords = ["capsule", "container", "framing", "cbor", "base64"]
categories = ["encoding", "parser-implementations"]

[dependencies]
crc32fast = "1.4"
data-encoding = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "2"

[features]
default = []
