[package]
name = "capsule"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
capsule-lib = { path = "../capsule-lib" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
