# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "capsule-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CLI for packing, inspecting, verifying, and unpacking Capsule container files"
documentation = "https://docs.rs/capsule-cli"
keywords = ["capsule", "cli", "container", "cbor", "base64"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
capsule-lib = { version = "1.0.0", path = "../capsule-lib" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
